# module.python-utils

./: .gitignore  LICENSE.txt  README.md  __init__.py  mkdocs.yml  pyproject.toml
docs/: CNAME  README.md
docs/pages/about/: license.md
docs/pages/api-docs/: MyClass.md  MyClassConfigPM.md
docs/pages/dev/: file-structure.md
docs/pages/dev/scripts/: 3.get-version.md  5.bump-version.md
docs/pages/getting-started/: configuration.md  error-codes.md  examples.md  installation.md
examples/simple/: main.py
scripts/: bump-version.sh  diagrams.sh  get-version.sh
templates/configs/: config.json  config.yml
tests/: test_potato_utils.py
