[build-system]
requires = ["setuptools>=70.3.0,<81.0.0", "setuptools-scm>=8.0.4,<9.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "potato_utils"
authors = [{ name = "Batkhuu Byambajav", email = "batkhuu10@gmail.com" }]
description = "This is a short description of the project."
readme = "README.md"
requires-python = ">=3.10,<4.0"
keywords = ["potato_utils", "template", "module", "python", "package"]
license-files = ["LICEN[CS]E*"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Libraries",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

# [tool.setuptools.packages.find]
# where = ["src"]
# include = ["potato_utils*"]
# namespaces = false

[tool.setuptools.dynamic]
version = { attr = "potato_utils.__version__.__version__" }
dependencies = { file = "./requirements.txt" }
optional-dependencies.extra = { file = [
	"./requirements/requirements.extra.txt",
] }

[project.urls]
Homepage = "https://github.com/bybatkhuu/module.python-utils"
Documentation = "https://bybatkhuu.github.io/module.python-utils"
Repository = "https://github.com/bybatkhuu/module.python-utils.git"
Issues = "https://github.com/bybatkhuu/module.python-utils/issues"
Changelog = "https://github.com/bybatkhuu/module.python-utils/blob/main/CHANGELOG.md"
